hphp/hack/test/deregister/test_function.php.exp
File "test_function.php", line 9, characters 3-9:
Unbound name: ignored (a global function) (Naming[2049])
